37 "The Pig Game" Deployed @CodeSandBox. Fixed a minor bug in the styles.css for the Rules anchor tag. Final version of app.js released with the game winner only when the player reaches the score 100.

--- a/JS-DOM/styles/style.css
+++ b/JS-DOM/styles/style.css
@@ -36,7 +36,11 @@ body {
     letter-spacing: 1vh;
 }
 
-.info a { text-decoration: none; }
+.info a { 
+    text-decoration: none; 
+    color: antiquewhite; 
+}
+
 .info a:hover { text-decoration: underline; }
 .info a:visited { color: antiquewhite; }
 
