--- a/JS-Objects-Functions-Advanced/project-budgety/style/style.css
+++ b/JS-Objects-Functions-Advanced/project-budgety/style/style.css
@@ -37,7 +37,7 @@ body {
 
 .top {
     height: 40vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url(back.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url("../img/back.png");
     background-size: cover;
     background-position: center;
     position: relative;
